@@ -16,15 +16,25 @@ package com.google.devtools.build.lib.rules.java;
 
 import static com.google.common.base.Preconditions.checkNotNull;
 import static com.google.common.base.Preconditions.checkState;
+import static com.google.devtools.build.lib.actions.ParameterFile.ParameterFileType.UNQUOTED;
 import static com.google.devtools.build.lib.rules.java.JavaCompileActionBuilder.UTF8_ENVIRONMENT;
 import static java.nio.charset.StandardCharsets.ISO_8859_1;
-import static java.util.stream.Collectors.joining;
 
 import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
+import com.google.common.collect.Iterables;
+import com.google.common.collect.Sets;
+import com.google.devtools.build.lib.actions.AbstractAction;
+import com.google.devtools.build.lib.actions.ActionEnvironment;
+import com.google.devtools.build.lib.actions.ActionExecutionContext;
 import com.google.devtools.build.lib.actions.Artifact;
+import com.google.devtools.build.lib.actions.CommandLines;
+import com.google.devtools.build.lib.actions.CompositeRunfilesSupplier;
+import com.google.devtools.build.lib.actions.ExecutionRequirements;
 import com.google.devtools.build.lib.actions.ParamFileInfo;
-import com.google.devtools.build.lib.actions.ParameterFile.ParameterFileType;
+import com.google.devtools.build.lib.actions.RunfilesSupplier;
+import com.google.devtools.build.lib.actions.SpawnResult;
 import com.google.devtools.build.lib.analysis.FilesToRunProvider;
 import com.google.devtools.build.lib.analysis.RuleContext;
 import com.google.devtools.build.lib.analysis.actions.CustomCommandLine;
@@ -34,12 +44,21 @@ import com.google.devtools.build.lib.cmdline.Label;
 import com.google.devtools.build.lib.collect.nestedset.NestedSet;
 import com.google.devtools.build.lib.collect.nestedset.NestedSetBuilder;
 import com.google.devtools.build.lib.collect.nestedset.Order;
+import com.google.devtools.build.lib.packages.TargetUtils;
+import com.google.devtools.build.lib.rules.java.JavaCompileAction.ProgressMessage;
+import com.google.devtools.build.lib.rules.java.JavaConfiguration.JavaClasspathMode;
 import com.google.devtools.build.lib.rules.java.JavaPluginInfoProvider.JavaPluginInfo;
-import com.google.devtools.build.lib.skyframe.serialization.autocodec.AutoCodec;
 import com.google.devtools.build.lib.util.LazyString;
-import com.google.devtools.build.lib.vfs.PathFragment;
-import java.util.ArrayList;
-import java.util.Collection;
+import com.google.devtools.build.lib.util.Pair;
+import com.google.devtools.build.lib.view.proto.Deps;
+import com.google.protobuf.ExtensionRegistry;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.Serializable;
+import java.util.Collections;
+import java.util.List;
+import java.util.function.Consumer;
+import java.util.stream.Stream;
 import javax.annotation.Nullable;
 
 /**
@@ -56,27 +75,35 @@ import javax.annotation.Nullable;
  */
 public class JavaHeaderCompileActionBuilder {
 
+  private static final ParamFileInfo PARAM_FILE_INFO =
+      ParamFileInfo.builder(UNQUOTED).setCharset(ISO_8859_1).build();
+
   private final RuleContext ruleContext;
 
   private Artifact outputJar;
   @Nullable private Artifact outputDepsProto;
+  @Nullable private Artifact manifestOutput;
+  @Nullable private Artifact gensrcOutputJar;
+  @Nullable private Artifact resourceOutputJar;
+  private ImmutableSet<Artifact> additionalOutputs = ImmutableSet.of();
   private ImmutableSet<Artifact> sourceFiles = ImmutableSet.of();
-  private final Collection<Artifact> sourceJars = new ArrayList<>();
+  private ImmutableList<Artifact> sourceJars = ImmutableList.of();
   private NestedSet<Artifact> classpathEntries = NestedSetBuilder.emptySet(Order.NAIVE_LINK_ORDER);
-  private ImmutableList<Artifact> bootclasspathEntries = ImmutableList.of();
+  private NestedSet<Artifact> bootclasspathEntries =
+      NestedSetBuilder.emptySet(Order.NAIVE_LINK_ORDER);
   @Nullable private Label targetLabel;
   @Nullable private String injectingRuleKind;
-  private PathFragment tempDirectory;
   private StrictDepsMode strictJavaDeps = StrictDepsMode.OFF;
-  private boolean reduceClasspath = true;
   private NestedSet<Artifact> directJars = NestedSetBuilder.emptySet(Order.NAIVE_LINK_ORDER);
   private NestedSet<Artifact> compileTimeDependencyArtifacts =
       NestedSetBuilder.emptySet(Order.STABLE_ORDER);
-  private ImmutableList<String> javacOpts;
+  private final ImmutableList.Builder<String> javacOptsBuilder = ImmutableList.builder();
   private JavaPluginInfo plugins = JavaPluginInfo.empty();
 
   private NestedSet<Artifact> additionalInputs = NestedSetBuilder.emptySet(Order.STABLE_ORDER);
   private NestedSet<Artifact> toolsJars = NestedSetBuilder.emptySet(Order.NAIVE_LINK_ORDER);
+
+  private boolean enableHeaderCompilerDirect = true;
 
   public JavaHeaderCompileActionBuilder(RuleContext ruleContext) {
     this.ruleContext = ruleContext;
@@ -85,6 +112,21 @@ public class JavaHeaderCompileActionBuilder {
   /** Sets the output jdeps file. */
   public JavaHeaderCompileActionBuilder setOutputDepsProto(@Nullable Artifact outputDepsProto) {
     this.outputDepsProto = outputDepsProto;
+    return this;
+  }
+
+  public JavaHeaderCompileActionBuilder setManifestOutput(@Nullable Artifact manifestOutput) {
+    this.manifestOutput = manifestOutput;
+    return this;
+  }
+
+  public JavaHeaderCompileActionBuilder setGensrcOutputJar(@Nullable Artifact gensrcOutputJar) {
+    this.gensrcOutputJar = gensrcOutputJar;
+    return this;
+  }
+
+  public JavaHeaderCompileActionBuilder setResourceOutputJar(@Nullable Artifact resourceOutputJar) {
+    this.resourceOutputJar = resourceOutputJar;
     return this;
   }
 
@@ -103,10 +145,15 @@ public class JavaHeaderCompileActionBuilder {
     return this;
   }
 
-  /** Sets Java compiler flags. */
-  public JavaHeaderCompileActionBuilder setJavacOpts(ImmutableList<String> javacOpts) {
-    checkNotNull(javacOpts, "javacOpts must not be null");
-    this.javacOpts = javacOpts;
+  /** Adds Java compiler flags. */
+  public JavaHeaderCompileActionBuilder addAllJavacOpts(Iterable<String> javacOpts) {
+    this.javacOptsBuilder.addAll(javacOpts);
+    return this;
+  }
+
+  /** Adds a Java compiler flag. */
+  public JavaHeaderCompileActionBuilder addJavacOpt(String javacOpt) {
+    this.javacOptsBuilder.add(javacOpt);
     return this;
   }
 
@@ -114,6 +161,12 @@ public class JavaHeaderCompileActionBuilder {
   public JavaHeaderCompileActionBuilder setOutputJar(Artifact outputJar) {
     checkNotNull(outputJar, "outputJar must not be null");
     this.outputJar = outputJar;
+    return this;
+  }
+
+  public JavaHeaderCompileActionBuilder setAdditionalOutputs(ImmutableSet<Artifact> outputs) {
+    checkNotNull(outputs, "outputs must not be null");
+    this.additionalOutputs = outputs;
     return this;
   }
 
@@ -125,9 +178,9 @@ public class JavaHeaderCompileActionBuilder {
   }
 
   /** Adds a jar archive of Java sources to compile. */
-  public JavaHeaderCompileActionBuilder addSourceJars(Collection<Artifact> sourceJars) {
+  public JavaHeaderCompileActionBuilder setSourceJars(ImmutableList<Artifact> sourceJars) {
     checkNotNull(sourceJars, "sourceJars must not be null");
-    this.sourceJars.addAll(sourceJars);
+    this.sourceJars = sourceJars;
     return this;
   }
 
@@ -140,7 +193,7 @@ public class JavaHeaderCompileActionBuilder {
 
   /** Sets the compilation bootclasspath entries. */
   public JavaHeaderCompileActionBuilder setBootclasspathEntries(
-      ImmutableList<Artifact> bootclasspathEntries) {
+      NestedSet<Artifact> bootclasspathEntries) {
     checkNotNull(bootclasspathEntries, "bootclasspathEntries must not be null");
     this.bootclasspathEntries = bootclasspathEntries;
     return this;
@@ -166,26 +219,10 @@ public class JavaHeaderCompileActionBuilder {
     return this;
   }
 
-  /**
-   * Sets the path to a temporary directory, e.g. for extracting sourcejar entries to before
-   * compilation.
-   */
-  public JavaHeaderCompileActionBuilder setTempDirectory(PathFragment tempDirectory) {
-    checkNotNull(tempDirectory, "tempDirectory must not be null");
-    this.tempDirectory = tempDirectory;
-    return this;
-  }
-
   /** Sets the Strict Java Deps mode. */
   public JavaHeaderCompileActionBuilder setStrictJavaDeps(StrictDepsMode strictJavaDeps) {
     checkNotNull(strictJavaDeps, "strictJavaDeps must not be null");
     this.strictJavaDeps = strictJavaDeps;
-    return this;
-  }
-
-  /** Enables reduced classpaths. */
-  public JavaHeaderCompileActionBuilder setReduceClasspath(boolean reduceClasspath) {
-    this.reduceClasspath = reduceClasspath;
     return this;
   }
 
@@ -203,18 +240,24 @@ public class JavaHeaderCompileActionBuilder {
     return this;
   }
 
+  public JavaHeaderCompileActionBuilder enableHeaderCompilerDirect(
+      boolean enableHeaderCompilerDirect) {
+    this.enableHeaderCompilerDirect = enableHeaderCompilerDirect;
+    return this;
+  }
+
   /** Builds and registers the action for a header compilation. */
-  public void build(JavaToolchainProvider javaToolchain, JavaRuntimeInfo hostJavabase) {
+  public void build(JavaToolchainProvider javaToolchain) throws InterruptedException {
     checkNotNull(outputDepsProto, "outputDepsProto must not be null");
     checkNotNull(sourceFiles, "sourceFiles must not be null");
     checkNotNull(sourceJars, "sourceJars must not be null");
     checkNotNull(classpathEntries, "classpathEntries must not be null");
     checkNotNull(bootclasspathEntries, "bootclasspathEntries must not be null");
-    checkNotNull(tempDirectory, "tempDirectory must not be null");
     checkNotNull(strictJavaDeps, "strictJavaDeps must not be null");
     checkNotNull(directJars, "directJars must not be null");
     checkNotNull(compileTimeDependencyArtifacts, "compileTimeDependencyArtifacts must not be null");
-    checkNotNull(javacOpts, "javacOpts must not be null");
+
+    ImmutableList<String> javacOpts = javacOptsBuilder.build();
 
     // Invariant: if strictJavaDeps is OFF, then directJars and
     // dependencyArtifacts are ignored
@@ -223,50 +266,91 @@ public class JavaHeaderCompileActionBuilder {
       compileTimeDependencyArtifacts = NestedSetBuilder.emptySet(Order.STABLE_ORDER);
     }
 
-    // The compilation uses API-generating annotation processors and has to fall back to
-    // javac-turbine.
-    boolean requiresAnnotationProcessing = !plugins.isEmpty();
+    // Enable the direct classpath optimization if there are no annotation processors.
+    // N.B. we only check if the processor classes are empty, we don't care if there is plugin
+    // data or dependencies if there are no annotation processors to run. This differs from
+    // javac where java_plugin may be used with processor_class unset to declare Error Prone
+    // plugins.
+    boolean useDirectClasspath = plugins.processorClasses().isEmpty();
 
-    SpawnAction.Builder builder = new SpawnAction.Builder();
+    // Use the optimized 'direct' implementation if it is available, and either there are no
+    // annotation processors or they are built in to the tool and listed in
+    // java_toolchain.header_compiler_direct_processors.
+    ImmutableSet<String> processorClasses = plugins.processorClasses().toSet();
+    boolean useHeaderCompilerDirect =
+        enableHeaderCompilerDirect
+            && javaToolchain.getHeaderCompilerDirect() != null
+            && javaToolchain.getHeaderCompilerBuiltinProcessors().containsAll(processorClasses);
+    JavaConfiguration javaConfiguration =
+        ruleContext.getConfiguration().getFragment(JavaConfiguration.class);
+    JavaClasspathMode classpathMode = javaConfiguration.getReduceJavaClasspath();
+    if (!Collections.disjoint(
+        processorClasses, javaToolchain.getReducedClasspathIncompatibleProcessors())) {
+      classpathMode = JavaClasspathMode.OFF;
+    }
 
-    builder.setEnvironment(
-        ruleContext.getConfiguration().getActionEnvironment().addFixedVariables(UTF8_ENVIRONMENT));
+    ActionEnvironment actionEnvironment =
+        ruleContext.getConfiguration().getActionEnvironment().addFixedVariables(UTF8_ENVIRONMENT);
 
-    builder.setProgressMessage(
+    LazyString progressMessage =
         new ProgressMessage(
-            this.outputJar, sourceFiles.size() + sourceJars.size(), plugins.processorClasses()));
+            /* prefix= */ "Compiling Java headers",
+            /* output= */ outputJar,
+            /* sourceFiles= */ sourceFiles,
+            /* sourceJars= */ sourceJars,
+            /* plugins= */ plugins);
 
-    builder.addTransitiveTools(toolsJars);
+    ImmutableSet.Builder<Artifact> outputs =
+        ImmutableSet.<Artifact>builder()
+            .add(outputJar)
+            .add(outputDepsProto)
+            .addAll(additionalOutputs);
+    Stream.of(gensrcOutputJar, resourceOutputJar, manifestOutput)
+        .filter(x -> x != null)
+        .forEachOrdered(outputs::add);
 
-    builder.addOutput(outputJar);
-    builder.addOutput(outputDepsProto);
+    NestedSetBuilder<Artifact> mandatoryInputs =
+        NestedSetBuilder.<Artifact>stableOrder()
+            .addTransitive(additionalInputs)
+            .addTransitive(bootclasspathEntries)
+            .addAll(sourceJars)
+            .addAll(sourceFiles)
+            .addTransitive(toolsJars);
 
-    builder.addTransitiveInputs(additionalInputs);
-    builder.addInputs(bootclasspathEntries);
-    builder.addInputs(sourceJars);
-    builder.addInputs(sourceFiles);
-
+    ImmutableList<RunfilesSupplier> runfilesSuppliers = ImmutableList.of();
     FilesToRunProvider headerCompiler =
-        (!requiresAnnotationProcessing && javaToolchain.getHeaderCompilerDirect() != null)
+        useHeaderCompilerDirect
             ? javaToolchain.getHeaderCompilerDirect()
             : javaToolchain.getHeaderCompiler();
     // The header compiler is either a jar file that needs to be executed using
     // `java -jar <path>`, or an executable that can be run directly.
+    CustomCommandLine executableLine;
     if (!headerCompiler.getExecutable().getExtension().equals("jar")) {
-      builder.setExecutable(headerCompiler);
+      runfilesSuppliers = ImmutableList.of(headerCompiler.getRunfilesSupplier());
+      mandatoryInputs.addTransitive(headerCompiler.getFilesToRun());
+      executableLine =
+          CustomCommandLine.builder().addExecPath(headerCompiler.getExecutable()).build();
     } else {
-      builder.addTransitiveInputs(hostJavabase.javaBaseInputsMiddleman());
-      builder.setJarExecutable(
-          hostJavabase.javaBinaryExecPath(),
-          headerCompiler.getExecutable(),
-          javaToolchain.getJvmOptions());
+      mandatoryInputs
+          .addTransitive(javaToolchain.getJavaRuntime().javaBaseInputsMiddleman())
+          .add(headerCompiler.getExecutable());
+      executableLine =
+          CustomCommandLine.builder()
+              .addPath(javaToolchain.getJavaRuntime().javaBinaryExecPathFragment())
+              .add("-Xverify:none")
+              .addAll(javaToolchain.getTurbineJvmOptions())
+              .add("-jar")
+              .addExecPath(headerCompiler.getExecutable())
+              .build();
     }
 
     CustomCommandLine.Builder commandLine =
         CustomCommandLine.builder()
             .addExecPath("--output", outputJar)
+            .addExecPath("--gensrc_output", gensrcOutputJar)
+            .addExecPath("--resource_output", resourceOutputJar)
+            .addExecPath("--output_manifest_proto", manifestOutput)
             .addExecPath("--output_deps", outputDepsProto)
-            .addPath("--temp_dir", tempDirectory)
             .addExecPaths("--bootclasspath", bootclasspathEntries)
             .addExecPaths("--sources", sourceFiles)
             .addExecPaths("--source_jars", sourceJars)
@@ -280,8 +364,7 @@ public class JavaHeaderCompileActionBuilder {
 
     if (targetLabel != null) {
       commandLine.add("--target_label");
-      if (targetLabel.getPackageIdentifier().getRepository().isDefault()
-          || targetLabel.getPackageIdentifier().getRepository().isMain()) {
+      if (targetLabel.getRepository().isDefault() || targetLabel.getRepository().isMain()) {
         commandLine.addLabel(targetLabel);
       } else {
         // @-prefixed strings will be assumed to be params filenames and expanded,
@@ -290,26 +373,55 @@ public class JavaHeaderCompileActionBuilder {
       }
     }
 
-    // The action doesn't require annotation processing, so use the non-javac-based turbine
-    // implementation.
-    if (!requiresAnnotationProcessing) {
+    ImmutableMap<String, String> executionInfo =
+        TargetUtils.getExecutionInfo(ruleContext.getRule(), ruleContext.isAllowTagsPropagation());
+    Consumer<Pair<ActionExecutionContext, List<SpawnResult>>> resultConsumer = null;
+    if (classpathMode == JavaClasspathMode.BAZEL) {
+      if (javaConfiguration.inmemoryJdepsFiles()) {
+        executionInfo =
+            ImmutableMap.of(
+                ExecutionRequirements.REMOTE_EXECUTION_INLINE_OUTPUTS,
+                outputDepsProto.getExecPathString());
+      }
+      resultConsumer = createResultConsumer(outputDepsProto);
+    }
+
+    if (useDirectClasspath) {
       NestedSet<Artifact> classpath;
       if (!directJars.isEmpty() || classpathEntries.isEmpty()) {
         classpath = directJars;
       } else {
         classpath = classpathEntries;
       }
-      builder.addTransitiveInputs(classpath);
+      mandatoryInputs.addTransitive(classpath);
 
       commandLine.addExecPaths("--classpath", classpath);
-      commandLine.add("--nojavac_fallback");
+      commandLine.add("--reduce_classpath_mode", "NONE");
 
       ruleContext.registerAction(
-          builder
-              .addCommandLine(
-                  commandLine.build(), ParamFileInfo.builder(ParameterFileType.UNQUOTED).build())
-              .setMnemonic("Turbine")
-              .build(ruleContext));
+          new SpawnAction(
+              /* owner= */ ruleContext.getActionOwner(),
+              /* tools= */ NestedSetBuilder.emptySet(Order.STABLE_ORDER),
+              /* inputs= */ mandatoryInputs.build(),
+              /* outputs= */ outputs.build(),
+              /* primaryOutput= */ outputJar,
+              /* resourceSet= */ AbstractAction.DEFAULT_RESOURCE_SET,
+              /* commandLines= */ CommandLines.builder()
+                  .addCommandLine(executableLine)
+                  .addCommandLine(commandLine.build(), PARAM_FILE_INFO)
+                  .build(),
+              /* commandLineLimits= */ ruleContext.getConfiguration().getCommandLineLimits(),
+              /* isShellCommand= */ false,
+              /* env= */ actionEnvironment,
+              /* executionInfo= */ ruleContext
+                  .getConfiguration()
+                  .modifiedExecutionInfo(executionInfo, "Turbine"),
+              /* progressMessage= */ progressMessage,
+              /* runfilesSupplier= */ CompositeRunfilesSupplier.fromSuppliers(runfilesSuppliers),
+              /* mnemonic= */ "Turbine",
+              /* executeUnconditionally= */ false,
+              /* extraActionInfoSupplier= */ null,
+              /* resultConsumer= */ resultConsumer));
       return;
     }
 
@@ -317,61 +429,75 @@ public class JavaHeaderCompileActionBuilder {
     // flags needed for the javac-based header compiler implementations that supports
     // annotation processing.
 
-    builder.addTransitiveInputs(classpathEntries);
-    builder.addTransitiveInputs(plugins.processorClasspath());
-    builder.addTransitiveInputs(plugins.data());
-    builder.addTransitiveInputs(compileTimeDependencyArtifacts);
+    if (!useHeaderCompilerDirect) {
+      mandatoryInputs.addTransitive(plugins.processorClasspath());
+      mandatoryInputs.addTransitive(plugins.data());
+    }
+    mandatoryInputs.addTransitive(compileTimeDependencyArtifacts);
 
-    commandLine.addExecPaths("--classpath", classpathEntries);
+    commandLine.addAll(
+        "--builtin_processors",
+        Sets.intersection(
+            plugins.processorClasses().toSet(),
+            javaToolchain.getHeaderCompilerBuiltinProcessors()));
     commandLine.addAll("--processors", plugins.processorClasses());
-    commandLine.addExecPaths("--processorpath", plugins.processorClasspath());
+    if (!useHeaderCompilerDirect) {
+      commandLine.addExecPaths("--processorpath", plugins.processorClasspath());
+    }
     if (strictJavaDeps != StrictDepsMode.OFF) {
       commandLine.addExecPaths("--direct_dependencies", directJars);
-      if (!compileTimeDependencyArtifacts.isEmpty()) {
-        commandLine.addExecPaths("--deps_artifacts", compileTimeDependencyArtifacts);
-      }
-    }
-    if (reduceClasspath && strictJavaDeps != StrictDepsMode.OFF) {
-      commandLine.add("--reduce_classpath");
-    } else {
-      commandLine.add("--noreduce_classpath");
     }
 
     ruleContext.registerAction(
-        builder
-            .addCommandLine(
-                commandLine.build(),
-                ParamFileInfo.builder(ParameterFileType.UNQUOTED).setCharset(ISO_8859_1).build())
-            .setMnemonic("JavacTurbine")
-            .build(ruleContext));
+        new JavaCompileAction(
+            /* compilationType= */ JavaCompileAction.CompilationType.TURBINE,
+            /* owner= */ ruleContext.getActionOwner(),
+            /* env= */ actionEnvironment,
+            /* tools= */ toolsJars,
+            /* runfilesSupplier= */ CompositeRunfilesSupplier.fromSuppliers(runfilesSuppliers),
+            /* progressMessage= */ progressMessage,
+            /* mandatoryInputs= */ mandatoryInputs.build(),
+            /* transitiveInputs= */ classpathEntries,
+            /* directJars= */ directJars,
+            /* outputs= */ outputs.build(),
+            /* executionInfo= */ executionInfo,
+            /* extraActionInfoSupplier= */ null,
+            /* executableLine= */ executableLine,
+            /* flagLine= */ commandLine.build(),
+            /* configuration= */ ruleContext.getConfiguration(),
+            /* dependencyArtifacts= */ compileTimeDependencyArtifacts,
+            /* outputDepsProto= */ outputDepsProto,
+            /* classpathMode= */ classpathMode));
   }
 
-  /** Static class to avoid keeping a reference to this builder after build() is called. */
-  @AutoCodec.VisibleForSerialization
-  @AutoCodec
-  static class ProgressMessage extends LazyString {
-
-    private final Artifact outputJar;
-    private final int fileCount;
-    private final NestedSet<String> processorClasses;
-
-    public ProgressMessage(Artifact outputJar, int fileCount, NestedSet<String> processorClasses) {
-      this.outputJar = outputJar;
-      this.fileCount = fileCount;
-      this.processorClasses = processorClasses;
-    }
-
-    @Override
-    public String toString() {
-      return String.format(
-          "Compiling Java headers %s (%d files)%s",
-          outputJar.prettyPrint(),
-          fileCount,
-          processorClasses.isEmpty()
-              ? ""
-              : processorClasses.toList().stream()
-                  .map(name -> name.substring(name.lastIndexOf('.') + 1))
-                  .collect(joining(", ", " and running annotation processors (", ")")));
-    }
+  /**
+   * Creates a consumer that reads the produced .jdeps file into memory. Pulled out into a separate
+   * function to avoid capturing a data member, which would keep the entire builder instance alive.
+   */
+  private static Consumer<Pair<ActionExecutionContext, List<SpawnResult>>> createResultConsumer(
+      Artifact outputDepsProto) {
+    return (Consumer<Pair<ActionExecutionContext, List<SpawnResult>>> & Serializable)
+        contextAndResults -> {
+          ActionExecutionContext context = contextAndResults.getFirst();
+          JavaCompileActionContext javaContext = context.getContext(JavaCompileActionContext.class);
+          if (javaContext == null) {
+            return;
+          }
+          SpawnResult spawnResult = Iterables.getOnlyElement(contextAndResults.getSecond());
+          try {
+            InputStream inMemoryOutput = spawnResult.getInMemoryOutput(outputDepsProto);
+            try (InputStream input =
+                inMemoryOutput == null
+                    ? context.getInputPath(outputDepsProto).getInputStream()
+                    : inMemoryOutput) {
+              javaContext.insertDependencies(
+                  outputDepsProto,
+                  Deps.Dependencies.parseFrom(input, ExtensionRegistry.getEmptyRegistry()));
+            }
+          } catch (IOException e) {
+            // Left empty. If we cannot read the .jdeps file now, we will read it later or throw
+            // an appropriate error then.
+          }
+        };
   }
 }
