@@ -14,19 +14,15 @@
 package com.google.devtools.build.lib.unix;
 
 import static com.google.common.truth.Truth.assertThat;
-import static com.google.devtools.build.lib.testutil.MoreAsserts.assertThrows;
 import static java.nio.charset.StandardCharsets.UTF_8;
+import static org.junit.Assert.assertThrows;
 import static org.junit.Assert.fail;
 import static org.junit.Assume.assumeTrue;
 
-import com.google.common.collect.ImmutableMap;
-import com.google.common.hash.HashCode;
 import com.google.devtools.build.lib.testutil.TestUtils;
 import com.google.devtools.build.lib.util.OS;
 import com.google.devtools.build.lib.vfs.DigestHashFunction;
-import com.google.devtools.build.lib.vfs.FileAccessException;
 import com.google.devtools.build.lib.vfs.FileSystem;
-import com.google.devtools.build.lib.vfs.FileSystemUtils;
 import com.google.devtools.build.lib.vfs.Path;
 import java.io.File;
 import java.io.FileNotFoundException;
@@ -40,61 +36,22 @@ import org.junit.runners.JUnit4;
 /** Tests for the {@link NativePosixFiles} class. */
 @RunWith(JUnit4.class)
 public class NativePosixFilesTest {
-  private FileSystem testFS;
+
   private Path workingDir;
   private Path testFile;
 
   @Before
   public final void createFileSystem() throws Exception  {
-    testFS = new UnixFileSystem(DigestHashFunction.DEFAULT_HASH_FOR_TESTS);
+    FileSystem testFS = new UnixFileSystem(DigestHashFunction.SHA256, /*hashAttributeName=*/ "");
     workingDir = testFS.getPath(new File(TestUtils.tmpDir()).getCanonicalPath());
     testFile = workingDir.getRelative("test");
-  }
-
-  /**
-   * This test validates that the md5sum() method returns hashes that match the official test
-   * vectors specified in RFC 1321, The MD5 Message-Digest Algorithm.
-   *
-   * @throws Exception
-   */
-  @Test
-  public void testValidateMd5Sum() throws Exception {
-    ImmutableMap<String, String> testVectors = ImmutableMap.<String, String>builder()
-        .put("", "d41d8cd98f00b204e9800998ecf8427e")
-        .put("a", "0cc175b9c0f1b6a831c399e269772661")
-        .put("abc", "900150983cd24fb0d6963f7d28e17f72")
-        .put("message digest", "f96b697d7cb7938d525a2f31aaf161d0")
-        .put("abcdefghijklmnopqrstuvwxyz", "c3fcd3d76192e4007dfb496cca67e13b")
-        .put("ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789",
-        "d174ab98d277d9f5a5611c2c9f419d9f")
-        .put(
-        "12345678901234567890123456789012345678901234567890123456789012345678901234567890",
-        "57edf4a22be3c955ac49da2e2107b67a")
-        .build();
-
-    for (String testInput : testVectors.keySet()) {
-      FileSystemUtils.writeContentAsLatin1(testFile, testInput);
-      HashCode result = NativePosixFiles.md5sum(testFile.getPathString());
-      assertThat(testVectors).containsEntry(testInput, result.toString());
-    }
-  }
-
-  @Test
-  public void throwsFileAccessException() throws Exception {
-    FileSystemUtils.createEmptyFile(testFile);
-    NativePosixFiles.chmod(testFile.getPathString(), 0200);
-
-    FileAccessException e =
-        assertThrows(
-            FileAccessException.class, () -> NativePosixFiles.md5sum(testFile.getPathString()));
-    assertThat(e).hasMessageThat().isEqualTo(testFile + " (Permission denied)");
   }
 
   @Test
   public void throwsFileNotFoundException() throws Exception {
     FileNotFoundException e =
         assertThrows(
-            FileNotFoundException.class, () -> NativePosixFiles.md5sum(testFile.getPathString()));
+            FileNotFoundException.class, () -> NativePosixFiles.stat(testFile.getPathString()));
     assertThat(e).hasMessageThat().isEqualTo(testFile + " (No such file or directory)");
   }
 
@@ -123,18 +80,19 @@ public class NativePosixFilesTest {
   }
 
   @Test
-  public void testGetxattr_AttributeFound() throws Exception {
+  public void testGetxattr_attributeFound() throws Exception {
     assumeXattrsSupported();
 
     String myfile = Files.createTempFile("getxattrtest", null).toString();
-    Runtime.getRuntime().exec("xattr -w foo bar " + myfile).waitFor();
+    assertThat(new ProcessBuilder("xattr", "-w", "foo", "bar", myfile).start().waitFor())
+        .isEqualTo(0);
 
     assertThat(new String(NativePosixFiles.getxattr(myfile, "foo"), UTF_8)).isEqualTo("bar");
     assertThat(new String(NativePosixFiles.lgetxattr(myfile, "foo"), UTF_8)).isEqualTo("bar");
   }
 
   @Test
-  public void testGetxattr_AttributeNotFoundReturnsNull() throws Exception {
+  public void testGetxattr_attributeNotFoundReturnsNull() throws Exception {
     assumeXattrsSupported();
 
     String myfile = Files.createTempFile("getxattrtest", null).toString();
@@ -144,7 +102,7 @@ public class NativePosixFilesTest {
   }
 
   @Test
-  public void testGetxattr_FileNotFound() throws Exception {
+  public void testGetxattr_fileNotFound() throws Exception {
     String nonexistentFile = workingDir.getChild("nonexistent").toString();
 
     assertThrows(
